# FFmpeg-Development-Kit

./: README.md
JNI/: build.gradle  videokit.c
JNI/app/: build.gradle
android-ndk-r17b/: ndk-depends  ndk-gdb  ndk-stack  ndk-which  source.properties
android-ndk-r17b/meta/: platforms.json
android-ndk-r17b/simpleperf/: ChangeLog  annotate.py  app_profiler.py  binary_cache_builder.py  debug_unwind_reporter.py  pprof_proto_generator.py  simpleperf_report_lib.py  utils.py
android-ndk-r17b/sysroot/: NOTICE
android-ndk-r17b/toolchains/: NOTICE-MIPS  NOTICE-MIPS64
android-ndk-r17b/wrap.sh/: asan.x86.sh  asan.x86_64.sh
ffmpeg/: build.sh  config.h  configure
ffmpeg-sample/: .gitignore  build.gradle  settings.gradle
ffmpeg-sample/app/: build.gradle
ffmpeg-sample/app/src/main/cpp/: .gitignore  CMakeLists.txt  ffmpeg.cmake  ffmpeg_build_system.cmake  libx264.cmake  libx264_build_system.cmake
ffmpeg-sample/library_extension_ffmpeg_demo/: build.gradle
ffmpeg-sample/library_ffmpeg/: build.gradle
ffmpeg-sample/library_ffmpeg/src/main/cpp/: CMakeLists.txt  copy_headers.cmake  ffmpeg.cmake  ffmpeg_build_system.cmake  libx264.cmake  native-lib.c
ffmpeg/doc/: config.texi
ffmpeg/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/libavcodec/: 4xm.d  a64multienc.d  aac_parser.d  aaccoder.d  aacdec.d  aacenc.d  aacenc_ltp.d  aacenc_pred.d  aacenc_tns.d  aacps_fixed.d  aacps_float.d  aacpsy.d  aacsbr.d  ac3_parser.d  ac3dec_data.d  ac3dec_fixed.d  ac3dec_float.d  acelp_pitch_delay.d  adpcm.d  adx_parser.d  adxenc.d  aic.d  alac.d  alacenc.d  aliaspixenc.d  allcodecs.d  amrnbdec.d  amrwbdec.d  anm.d  ansi.d  aptx.d  ass.d  ass_split.d  asv.d  asvdec.d  asvenc.d  atrac3plusdec.d  atrac3plusdsp.d  audio_frame_queue.d  audiodsp.d  (+390 more)
ffmpeg/libavdevice/: alldevices.d  avdevice.d  indev_list.c  libavdevice.pc  libavdevice.so.58  libavdevice.ver  libavdevice.version  outdev_list.c  reverse.d  timefilter.d  utils.d  v4l2-common.d  v4l2.d  v4l2enc.d
ffmpeg/libavfilter/: af_acrusher.d  af_aecho.d  af_afir.d  af_amerge.d  af_anequalizer.d  af_anull.d  af_aphaser.d  af_aresample.d  af_asetrate.d  af_ashowinfo.d  af_atempo.d  af_biquads.d  af_channelsplit.d  af_compand.d  af_compensationdelay.d  af_crossfeed.d  af_dynaudnorm.d  af_firequalizer.d  af_hdcd.d  af_headphone.d  af_join.d  af_loudnorm.d  af_sidechaincompress.d  af_surround.d  af_tremolo.d  af_volume.d  af_volumedetect.d  asink_anullsink.d  asrc_anoisesrc.d  asrc_anullsrc.d  asrc_hilbert.d  asrc_sine.d  avf_abitscope.d  avf_avectorscope.d  avf_concat.d  avf_showfreqs.d  avf_showspectrum.d  avf_showvolume.d  avfilter.d  avfiltergraph.d  (+80 more)
ffmpeg/libavformat/: 3dostr.d  a64.d  aacdec.d  aadec.d  ac3dec.d  acm.d  act.d  adxdec.d  aea.d  aiffenc.d  anm.d  ape.d  apetag.d  apngdec.d  apngenc.d  aptxdec.d  asf.d  asfcrypt.d  asfdec_f.d  asfdec_o.d  assdec.d  assenc.d  astdec.d  async.d  avc.d  avienc.d  avio.d  aviobuf.d  avr.d  bethsoftvid.d  bmv.d  boadec.d  brstm.d  cafdec.d  cafenc.d  cdg.d  cinedec.d  concat.d  concatdec.d  crcenc.d  (+207 more)
ffmpeg/libavutil/: adler32.d  aes.d  base64.d  blowfish.d  bprint.d  buffer.d  channel_layout.d  color_utils.d  cpu.d  crc.d  des.d  error.d  eval.d  fifo.d  hwcontext.d  integer.d  intmath.d  lfg.d  lls.d  (+18 more)
(+1245 files in other folders)
